--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dotenv": "^0.1.3",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.5.0",
     "react-pdf-table": "^1.0.0-alfa.3",
