--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ag-media/react-pdf-table": "^2.0.1",
     "@headlessui/react": "^2.2.0",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-context-menu": "^2.2.5",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
@@ -21,6 +22,7 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@react-pdf/renderer": "^4.1.6",
     "@tanstack/react-table": "^8.20.6",
@@ -39,6 +41,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-pdf-table": "^1.0.0-alfa.3",
     "react-router-dom": "^7.1.3",
+    "recharts": "^2.15.1",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
